@@ -1,6 +1,6 @@
 {
   "name": "lpc_hub",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "LPC but crossplatform",
   "author": "Ethan Zeronik",
   "main": "hubMain.js",
@@ -29,8 +29,7 @@
       "category": "public.app-category.developer-tools"
     },
     "extraFiles": [
-      "./changelog.txt",
-      "./settings.json"
+      "./changelog.txt"
     ],
     "publish": [
       {
